Vector icons: fix R_MOVE_TO after CLOSE

This might affect some pre-existing vector icons, and in fact
I found many that have a R_MOVE_TO right after a CLOSE. But all
the ones I checked didn't exhibit the bug because the current
subpath already happened to start and finish in the same place.

BUG=697497

Review-Url: https://codereview.chromium.org/2732493002
Cr-Commit-Position: refs/heads/master@{#454666}

Former-commit-id: c570b631a9db029a57a73d0b4068d2f625795135